[project]
name = "ytinfo"
version = "0.1.0"
description = "Extract YouTube video metadata and transcript into flat JSON"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["yt-dlp"]

[project.scripts]
ytinfo = "ytinfo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["ytinfo.py"]
